# latentsync-faster

./: .gitignore  Dockerfile  Dockerfile_example  ONNX_SUPPORT.md  README.md  TODO.md  align.py  batch_inference.py  batch_process.py  demo.py  docker-compose.yml  docker.sh  export_onnx.sh  export_unet_to_onnx.py  export_unet_to_tensorrt.py  hanhai22.sh  inference.py  inference.sh  inference1.py  main.py  pt.txt  pyproject.toml  requirements.txt  run_demo_offline.sh  setup.py  setup_env.sh
batch_process_tool/: README.md  batch_inference_multilang.py  batch_inference_single_audio.py  process_timestamped_text.py  process_video_translate.py
checkpoints/: latentsync_unet.onnx
configs/: audio.yaml  config.py
configs/unet/: first_stage.yaml  second_stage.yaml
doc/: docker.md  example.py  usage.md
examples/: docker.md  example_vad_usage.py  test_insightface_speed.py  test_vad_speed.py
examples/inference/: coustom_stream.py  custom_stream.py  lipsync.py  silence_audio.py  usage.md
latentsync/: __init__.py
latentsync/audio/: tts.py
latentsync/configs/: config.py
latentsync/face_detection/: __init__.py  face_landmark_detector.py  fix_onnx_model.py
latentsync/face_detection/models/: __init__.py  face_detector_fixed.onnx
latentsync/face_detection/utils/: __init__.py  bbox.py  box_utils.py
latentsync/inference/: __init__.py  _datas.py  _types.py  _utils.py  audio_infer.py  buffer_infer.py  context.py  face_infer.py  latentsync.py  lipsync_infer.py  lipsync_model.py  main.py  multi_infer.py  onnx_model.py  utils.py  vad_infer.py
latentsync/models/: attention.py  motion_module.py  onnx_wrapper.py  resnet.py  trt_wrapper.py  unet.py
latentsync/pipelines/: __init__.py  lipsync_diffusion_pipeline.py  lipsync_pipeline.py  metadata.py
latentsync/utils/: affine_transform.py  audio.py  face_processor.py  frame_preprocess.py  image_processor.py  log.py  test_affine_transform.py  timer.py  vad.py  video.py
latentsync/whisper/: audio2feature.py
scripts/: export_unet_to_onnx.py  export_unet_to_tensorrt.py  inference1.py  performance_test.py  setup_face_detection.py  speedtest.py
